--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,6 +13,37 @@
     </header>
 
     <main>
+      <!-- User/Login Icon in Header -->
+      <div id="user-icon-container" style="position: absolute; top: 20px; right: 20px;">
+        <button id="user-icon" style="background-color: transparent; color: white; font-size: 24px; width: 40px; height: 40px; padding: 0; border-radius: 50%; border: 2px solid white;">👤</button>
+      </div>
+
+      <!-- Login Modal -->
+      <div id="login-modal" class="modal hidden">
+        <div class="modal-content">
+          <span class="close-modal">&times;</span>
+          <h3>Teacher Login</h3>
+          <form id="login-form">
+            <div class="form-group">
+              <label for="teacher-username">Username:</label>
+              <input type="text" id="teacher-username" required />
+            </div>
+            <div class="form-group">
+              <label for="teacher-password">Password:</label>
+              <input type="password" id="teacher-password" required />
+            </div>
+            <button type="submit">Login</button>
+          </form>
+          <div id="login-message" class="hidden"></div>
+        </div>
+      </div>
+
+      <!-- Teacher Dashboard (hidden by default) -->
+      <div id="teacher-dashboard" class="hidden" style="position: fixed; top: 20px; right: 80px; background: white; padding: 15px; border-radius: 5px; box-shadow: 0 2px 10px rgba(0,0,0,0.2); z-index: 100;">
+        <p id="teacher-name" style="margin: 0 0 10px 0;"></p>
+        <button id="logout-btn" style="width: 100%;">Logout</button>
+      </div>
+
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
